--- a/AtividadeExtra3_Fundamentos/.project
+++ b/AtividadeExtra3_Fundamentos/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AtividadeExtra1</name>
+	<name>AtividadeExtra3_Fundamentos</name>
 	<comment></comment>
 	<projects>
 	</projects>
