--- a/AtividadeExtra2_Fundamentos/.project
+++ b/AtividadeExtra2_Fundamentos/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AtividadeExtra2</name>
+	<name>AtividadeExtra2_Fundamentos</name>
 	<comment></comment>
 	<projects>
 	</projects>
